# bids2ebrains

./: LICENSE  README.md  __init__.py  codemeta.json  gitignore  gsoc25-final-report.md  pyproject.toml  requirements.txt  streamlit_app.py  style.css
bids2ebrains/: __init__.py  cli.py  config.py  converter.py  core.py  grouper.py  mappings.py  patcher.py  resolver.py  scanner.py  uploader.py  utils.py  validator.py
streamlit/: config.toml
